--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,7 @@
 {
   "manifest_version": 3,
   "name": "LeetCode Monaco Editor Injector",
-  "version": "0.2.0",
+  "version": "0.2.1",
   "description": "Replaces the LeetCode editor with Monaco Editor (Locally Bundled).",
   "icons": {
     "16": "icons/icon16.png",
@@ -9,12 +9,12 @@
     "128": "icons/icon128.png"
   },
   "permissions": [
-    "scripting", 
-    "tabs",   
-    "storage"  
+    "scripting",
+    "tabs",
+    "storage"
   ],
   "host_permissions": [
-    "*://*.leetcode.com/*" 
+    "*://*.leetcode.com/*"
   ],
   "background": {
     "service_worker": "background.js"
@@ -29,9 +29,11 @@
   ],
   "web_accessible_resources": [
     {
-     
-      "resources": ["lib/monaco-editor/min/*"],
-      "matches": ["*://*.leetcode.com/*"] 
+      "resources": [
+        "lib/monaco-editor/min/*",
+        "lib/monaco-editor/min/vs/editor/editor.worker.js"
+        ],
+      "matches": ["*://*.leetcode.com/*"]
     }
   ]
 }
